# ai-driven-real-time-console

./: .env  .env.example  .env.sample  .gitignore  Makefile  pyproject.toml  requirements.txt  requirements_dev.txt
conversation/: conversation_manager.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: ChatInterface.jsx  MultiVisualization.jsx  QueryVisualization.jsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/chat/components/: AdvancedVisualization.jsx  MultiVisualization.jsx
nlp/: hf_sql_model.py  openai_sql_model.py  query_understanding.py  schema_encoder.py
nlp/advanced_features/: data_validation.py  query_optimization.py
server/: config.py  database.py  main.py  multi_tenancy.py  schemas.py
server/models/: base.py  tenant.py  user.py
server/routers/: query_router.py
server/utils/: redis_client.py  response_utils.py
src/examples/: advanced_usage.py  basic_usage.py  generate_schema.py  langchain_usage.py
src/nlsql/api/: context.py  main.py  middleware.py  schemas.py
src/nlsql/api/routes/: health.py  query.py
src/nlsql/core/: config.py  exceptions.py  logging.py
src/nlsql/generators/: base.py  langchain_generator.py  openai_generator.py
src/nlsql/schema/: encoder.py
src/nlsql/security/: validator.py
src/nlsql/utils/: database.py  helpers.py
src/nlsql/visualization/: analyzer.py
tests/: test_sql_generation.py  test_t5.py
