[tool.poetry]
name = "nlsql"
version = "0.1.0"
description = "Natural Language to SQL converter using OpenAI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.12.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
sqlparse = "^0.4.4"
mysqlclient = "^2.2.7"
fastapi = "^0.115.8"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
orjson = "^3.10.15"
pymysql = "^1.1.1"
cryptography = "<44.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
mypy = "^1.5.0"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
